--- a/route/route.html
+++ b/route/route.html
@@ -26,6 +26,17 @@
             font-weight: bold;
             text-decoration: none;
         }
+
+
+        @font-face {
+            font-family: element-icons;
+            src: url(../fonts/element-icons.535877f.woff) format("woff"),
+            url(../fonts/element-icons.732389d.ttf) format("truetype");
+            font-weight: 400;
+            font-display: "auto";
+            font-style: normal
+        }
+
     </style>
 </head>
 
